# nonebot-plugin-qqshell

./: README.md  __init__.py  handler.py  pyproject.toml  services.py  template_env.py
nonebot_plugin_qqshell/: __init__.py  config.py  handler.py
templates/: shell_panel.html  xterm.html
utils/: shell.py
